--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "experss": "^0.0.1-security",
@@ -19,6 +20,7 @@
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.4"
   }
 }
