--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "experss": "^0.0.1-security",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
